Bug 448569 - Panels and Docks disappear when moved to secondary screens and cannot be recovered
Summary: Panels and Docks disappear when moved to secondary screens and cannot be reco...
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: 0.10.7
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-01-15 23:28 UTC by Ruby
Modified: 2022-01-16 20:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.10.8
Sentry Crash Report:


Attachments
Set back to Primary (49.01 KB, image/png)
2022-01-15 23:28 UTC, Ruby
Details
Layout as backup (13.34 KB, text/plain)
2022-01-16 12:43 UTC, Ruby
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ruby 2022-01-15 23:28:05 UTC
Created attachment 145517 [details]
Set back to Primary

SUMMARY
When moving a panel or dock to a secondary screen, they disappear and cannot be recovered by changing them back to the primary screen.

STEPS TO REPRODUCE
1. Install OS that ships with latest release of Latte
2. Right-click any panel or dock, choose Edit Panel
3. Move panel to secondary screen
4. Try moving it back through Configure Latte -> Docks, Panels,...

OBSERVED RESULT
Panel disappears completely, including the Edit menu. When trying to move it back to the primary screen, nothing happens other than the text changes back to Primary or DisplayPort-2

EXPECTED RESULT


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Garuda Linux 
(available in About System)
KDE Plasma Version: 5.23.5
KDE Frameworks Version: 5.90.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
While this seems to be similar to this issue, I do not have a blurred menu and instead it disappears completely https://bugs.kde.org/show_bug.cgi?id=434440
Comment 1 Michail Vourlakos 2022-01-15 23:46:23 UTC
are you sure you are using Latte 0.10.7 ?
Comment 2 Michail Vourlakos 2022-01-16 01:13:57 UTC
this is not reproducable in my system... needs more info how to reproduce
Comment 3 Ruby 2022-01-16 12:05:53 UTC
I checked the version before I submitted the ticket. It does actually show the panel on the correct screen after reboots, so it's possible that it is conflicting with something else (I've had GPU driver issues as well, but I managed to get it to work by switching to amdgpu rather than radeon)
Comment 4 Michail Vourlakos 2022-01-16 12:38:22 UTC
Please send your layout producing this issue in case it is something else
Comment 5 Ruby 2022-01-16 12:43:17 UTC
Created attachment 145536 [details]
Layout as backup

Exported the layout as backup as requested
Comment 6 Michail Vourlakos 2022-01-16 19:59:46 UTC
Git commit d346e54d41e07c7a84a4f50fa4ff9a56d742e511 by Michail Vourlakos.
Committed on 16/01/2022 at 19:57.
Pushed by mvourlakos into branch 'v0.10'.

panels:fix switch to explicit screens and back

--some improvements introduced to 0.10.7 broke the
screen switching codepath for panels. With this
fix users can again move panels around for their
screens
FIXED-IN:0.10.8

M  +8    -2    app/view/positioner.cpp

https://invent.kde.org/plasma/latte-dock/commit/d346e54d41e07c7a84a4f50fa4ff9a56d742e511
Comment 7 Michail Vourlakos 2022-01-16 20:00:27 UTC
Git commit 84fe31c3180737312c173a283e3328780f0aa75a by Michail Vourlakos.
Committed on 16/01/2022 at 20:00.
Pushed by mvourlakos into branch 'master'.

panels:fix switch to explicit screens and back

--some improvements introduced to 0.10.7 broke the
screen switching codepath for panels. With this
fix users can again move panels around for their
screens
FIXED-IN:0.10.8

M  +8    -2    app/view/positioner.cpp

https://invent.kde.org/plasma/latte-dock/commit/84fe31c3180737312c173a283e3328780f0aa75a
Comment 8 Michail Vourlakos 2022-01-16 20:00:57 UTC
thank you very much for this reporting... it is now fixed...