panels:fix switch to explicit screens and back

--some improvements introduced to 0.10.7 broke the
screen switching codepath for panels. With this
fix users can again move panels around for their
screens

BUG:448569
FIXED-IN:0.10.8